--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <h1>My Passion for Guitars/Music</h1>
     <p>I have been interested in <strong>guitars</strong> ever since I heard <strong>metal</strong> <a href ="https://www.guitarcenter.com" title ="Guitar Center homepage" target ="_blank"> music</a> for the first time (5 years old).</p>
-    <img src ="C:\Users\cbert\Downloads\Red_Guitar_Center_Logo.jpg" alt ="Guitar Center Logo"/>
+    <img src ="Red_Guitar_Center_Logo.jpg" alt ="Guitar Center Logo"/>
+    <a href="fancifymytext.html">Assignment 4 Work</a>
 </body>
 </html>
